use generic types on response
