# internal/handlers/docs/swagger.json
@@ -38,7 +38,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ImagePullSecret"
+                            "$ref": "#/definitions/v1.detailResponse-models_ImagePullSecret"
                         }
                     },
                     "400": {
@@ -79,7 +79,68 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ImagePullSecret"
+                            "$ref": "#/definitions/v1.detailResponse-models_ImagePullSecret"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.simpleResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.simpleResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/secret/list": {
+            "get": {
+                "description": "list of the secret",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "secret"
+                ],
+                "summary": "list of the secret",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "column name to order by",
+                        "name": "column",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "name": "desc",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "page size",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.listResponse-array_models_ImagePullSecret-models_ImagePullSecret"
                         }
                     },
                     "400": {
@@ -122,7 +183,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ImagePullSecret"
+                            "$ref": "#/definitions/v1.detailResponse-models_ImagePullSecret"
                         }
                     },
                     "400": {
@@ -282,7 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/v1.detailResponse-models_User"
                         }
                     },
                     "400": {
@@ -325,7 +386,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/v1.detailResponse-models_User"
                         }
                     },
                     "400": {
@@ -514,6 +575,54 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.detailResponse-models_ImagePullSecret": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/models.ImagePullSecret"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.detailResponse-models_User": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/models.User"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.listResponse-array_models_ImagePullSecret-models_ImagePullSecret": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ImagePullSecret"
+                    }
+                },
+                "len": {
+                    "type": "integer"
+                },
+                "message": {
                     "type": "string"
                 }
             }
